--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "type": "module",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.21.1"
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "mongoose": "^8.8.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
